project 1 correction03